Fixes the headlines on the inline sheets and adds new classes for the headline image. Fixes an issue with the window content overflow.

--- a/src/styles/base/foundry-ui.scss
+++ b/src/styles/base/foundry-ui.scss
@@ -10,7 +10,3 @@
 #chat-form .cm-s-easymde {
     background: $sheet-background;
 }
-
-.window-app .window-content {
-    overflow-y: hidden;
-}
