--- a/src/styles/components/sheet/sheet.scss
+++ b/src/styles/components/sheet/sheet.scss
@@ -16,6 +16,7 @@
     .window-content {
         padding: 0;
         background: $sheet-background;
+        overflow-y: hidden;
     }
 
     a:hover {
